--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
 
-    <title>To do list 2</title>
+    <title>To do list</title>
 </head>
 
 <body>
