--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
     <title>To do list</title>
 </head>
@@ -29,10 +31,31 @@
                 <span>Task 3</span>
             </li>
         </ol>
+        <form action="">
+            <ol>
+                <li></li>
+                <label for="data">Data de início:</label>
+                <input type="date" />
+                </li>
+                <li>
+                    <label for="data">Data de término:</label>
+                    <input type="date" />
+                </li>
+            </ol>
+        </form>
 
     </div>
     <p id="resultado"></p>
     <script src="script.js"></script>
 </body>
+<footer>
+    <div class="redes-sociais">
+        <a href="https://wa.me/5599999999999" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        <a href="mailto:seuemail@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.instagram.com/seuusuario/" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+    <p>© 2025 Glaudejane | Todos os direitos reservados</p>
+</footer>
+
 
 </html>
